# aho_vsegda_vo_vsem_vinovati

./: .gitignore
backend/: .env.example  Cargo.toml
backend/migrations/2024-12-08-135741_create_departments/: down.sql  up.sql
backend/migrations/2024-12-08-140001_create_positions/: down.sql  up.sql
backend/migrations/2024-12-08-140107_create_employees/: down.sql  up.sql
backend/src/: conifg.rs  lib.rs  logging.rs  main.rs  schema.rs
backend/src/db/: mod.rs
backend/src/handlers/: departments.rs  employees.rs  positions.rs
backend/src/models/: departments.rs  employees.rs  mod.rs  positions.rs
backend/src/services/: mod.rs
backend/src/services/ldap_service/: ad_operations.rs  mod.rs
frontend/: app.vue  nuxt.config.ts  package.json  pnpm-lock.yaml  tailwind.config.js
frontend/components/: Header.vue  Modal.vue  NavLink.vue
frontend/components/common/: ApplicationLogo.vue
frontend/layouts/: default.vue  error.vue
frontend/pages/: index.vue
frontend/pages/departments/: index.vue
frontend/pages/employees/: [id].vue  index.vue
frontend/pages/employees/add/: index.vue
frontend/pages/employees/list/: index.vue
frontend/pages/equipment/: index.vue
